# PythonTemplate

./: pyproject.toml  tox.ini
.cspell/: custom-dictionary-workspace.txt
src/template/: __init__.py
template/: __main__.py
tests/: test_template.py  test_version.py
